--- a/Ensemble.ipynb
+++ b/Ensemble.ipynb
@@ -2,9 +2,25 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Using Python-MIP package version 1.7.2\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/marcos/Documents/Experiments/envs/crime/lib/python3.7/site-packages/sklearn/utils/deprecation.py:144: FutureWarning: The sklearn.linear_model.base module is  deprecated in version 0.22 and will be removed in version 0.24. The corresponding classes / functions should instead be imported from sklearn.linear_model. Anything that cannot be imported from sklearn.linear_model is now part of the private API.\n",
+      "  warnings.warn(message, FutureWarning)\n"
+     ]
+    }
+   ],
    "source": [
     "import pandas as pd\n",
     "from sklearn.model_selection import train_test_split\n",
@@ -18,6 +34,36 @@
     "import numpy as np\n",
     "import optuna, sklearn, sklearn.datasets\n",
     "from fair_models import coefficient_of_variation, MOOLogisticRegression, FindCLogisticRegression, FindCCLogisticRegression,FairScalarization"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import sklearn\n",
+    "from scipy import stats\n",
+    "import math\n",
+    "\n",
+    "class SimpleVoting():\n",
+    "    def __init__(self, estimators, voting='hard'):\n",
+    "        self.estimators = estimators\n",
+    "        self.voting = voting\n",
+    "        self.classes_ = estimators[0][1].classes_\n",
+    "    \n",
+    "    def predict(self, X):\n",
+    "        if self.voting=='soft':\n",
+    "            argmax = np.argmax(np.mean([m[1].predict_proba(X) for m in self.estimators],axis=0), axis=1)\n",
+    "            y_pred = np.array([self.classes_[v] for v in argmax])\n",
+    "        else:\n",
+    "            y_pred = stats.mode([m[1].predict(X) for m in self.estimators],axis=0)[0][0]\n",
+    "        \n",
+    "        return y_pred\n",
+    "    \n",
+    "    def score(self, X, y):\n",
+    "        y_pred = self.predict(X)\n",
+    "        return sklearn.metrics.accuracy_score(y, y_pred)"
    ]
   },
   {
@@ -58,8 +104,8 @@
     "\n",
     "y = numerical_data['Risk']\n",
     "\n",
-    "random_seed = np.random.randint(0, 1000)\n",
-    "random_seed2 = np.random.randint(0, 1000)\n",
+    "random_seed = 2000#np.random.randint(0, 1000)\n",
+    "random_seed2 = 2000#np.random.randint(0, 1000)\n",
     "\n",
     "X_tv, X_test, y_tv, y_test = train_test_split(X, y, test_size=200, random_state = random_seed)\n",
     "X_train, X_val, y_train, y_val = train_test_split(X_tv, y_tv, test_size=100, random_state = random_seed2)"
@@ -81,7 +127,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Using license file /opt/gurobi/gurobi.lic\n",
+      "Using license file /home/marcos/gurobi.lic\n",
       "Academic license - for non-commercial use only\n"
      ]
     }
@@ -133,7 +179,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "eclf1 = VotingClassifier(estimators=models_t, voting='hard')"
+    "eclf1 = SimpleVoting(estimators=models_t, voting='soft')"
    ]
   },
   {
@@ -142,7 +188,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "eclf1 = eclf1.fit(X_train, y_train)"
+    "#eclf1 = eclf1.fit(X_val, y_val)"
    ]
   },
   {
@@ -155,10 +201,10 @@
      "output_type": "stream",
      "text": [
       "Metrics - Train Data\n",
-      "Acc:  0.6936936936936937\n",
-      "Eq Opor:  0.9819004524886877\n",
-      "P Perc:  0.8569157392686805\n",
-      "Coev Var:  0.6847719263017362\n"
+      "Acc:  0.6531531531531531\n",
+      "Eq Opor:  0.9589490968801313\n",
+      "P Perc:  0.9692961738308926\n",
+      "Coev Var:  0.6761773706108338\n"
      ]
     }
    ],
@@ -180,10 +226,10 @@
      "output_type": "stream",
      "text": [
       "Metrics - Val Data\n",
-      "Acc:  0.59\n",
-      "Eq Opor:  0.9150326797385621\n",
-      "P Perc:  0.9229797979797979\n",
-      "Coev Var:  0.7655137765938702\n"
+      "Acc:  0.68\n",
+      "Eq Opor:  0.9890109890109889\n",
+      "P Perc:  0.9629629629629629\n",
+      "Coev Var:  0.6614940032155477\n"
      ]
     }
    ],
@@ -205,10 +251,10 @@
      "output_type": "stream",
      "text": [
       "Metrics - Test Data\n",
-      "Acc:  0.6\n",
-      "Eq Opor:  0.9694915254237289\n",
-      "P Perc:  0.8286951144094001\n",
-      "Coev Var:  0.7746269997882853\n"
+      "Acc:  0.61\n",
+      "Eq Opor:  0.995967741935484\n",
+      "P Perc:  0.9309523809523809\n",
+      "Coev Var:  0.6775074858941582\n"
      ]
     }
    ],
@@ -250,9 +296,9 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/root/anaconda3/envs/py36/lib/python3.6/site-packages/sklego/metrics.py:155: RuntimeWarning: invalid value encountered in double_scalars\n",
+      "/home/marcos/Documents/Experiments/envs/crime/lib/python3.7/site-packages/sklego/metrics.py:155: RuntimeWarning: invalid value encountered in double_scalars\n",
       "  score = np.minimum(p_y1_z1 / p_y1_z0, p_y1_z0 / p_y1_z1)\n",
-      "/root/anaconda3/envs/py36/lib/python3.6/site-packages/sklego/metrics.py:79: RuntimeWarning: No samples with y_hat == 1 for Sex == 1, returning 0\n",
+      "/home/marcos/Documents/Experiments/envs/crime/lib/python3.7/site-packages/sklego/metrics.py:79: RuntimeWarning: No samples with y_hat == 1 for Sex == 1, returning 0\n",
       "  RuntimeWarning,\n"
      ]
     }
@@ -268,13 +314,20 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Finding non-dominate models"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
     "par_models = []\n",
-    "\n",
+    "metrics_selected = []\n",
     "for i in range(len(sols)):\n",
     "    flag = True\n",
     "    for j in range(len(sols)):\n",
@@ -284,31 +337,45 @@
     "                flag = False\n",
     "                break\n",
     "    if flag:\n",
-    "        par_models.append((\"Model \"+str(i), sols[i]))"
+    "        metrics_selected+=[metrics[i]]\n",
+    "        par_models.append((\"Model \"+str(i), sols[i]))\n",
+    "metrics_selected = pd.DataFrame(metrics_selected, columns=['Acc', 'Eq Opor', 'P Perc', 'Coev Var'])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Cleaning methods with too low performance"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def percentile(data, percentile):\n",
+    "    size = len(data)\n",
+    "    return sorted(data)[int(math.ceil((size * percentile) / 100)) - 1]\n",
+    "\n",
+    "all_idx = set(metrics_selected.index)\n",
+    "for metr, sign in zip(metrics_selected, [1, 1, 1, -1]):\n",
+    "    if sign>0:\n",
+    "        perc = percentile(metrics_selected[metr], 10)\n",
+    "        all_idx = all_idx.intersection(np.where(metrics_selected[metr]>=perc)[0])\n",
+    "    else:\n",
+    "        perc = percentile(metrics_selected[metr], 90)\n",
+    "        all_idx = all_idx.intersection(np.where(metrics_selected[metr]<=perc)[0])\n",
+    "        \n",
+    "par_models_clean = [model for idx, model in enumerate(par_models) if idx in all_idx]"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 17,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/root/anaconda3/envs/py36/lib/python3.6/site-packages/sklego/metrics.py:155: RuntimeWarning: invalid value encountered in double_scalars\n",
-      "  score = np.minimum(p_y1_z1 / p_y1_z0, p_y1_z0 / p_y1_z1)\n",
-      "/root/anaconda3/envs/py36/lib/python3.6/site-packages/sklego/metrics.py:155: RuntimeWarning: invalid value encountered in double_scalars\n",
-      "  score = np.minimum(p_y1_z1 / p_y1_z0, p_y1_z0 / p_y1_z1)\n",
-      "/root/anaconda3/envs/py36/lib/python3.6/site-packages/sklego/metrics.py:155: RuntimeWarning: invalid value encountered in double_scalars\n",
-      "  score = np.minimum(p_y1_z1 / p_y1_z0, p_y1_z0 / p_y1_z1)\n",
-      "/root/anaconda3/envs/py36/lib/python3.6/site-packages/sklego/metrics.py:79: RuntimeWarning: No samples with y_hat == 1 for Sex == 1, returning 0\n",
-      "  RuntimeWarning,\n",
-      "/root/anaconda3/envs/py36/lib/python3.6/site-packages/sklego/metrics.py:79: RuntimeWarning: No samples with y_hat == 1 for Sex == 1, returning 0\n",
-      "  RuntimeWarning,\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "best_acc = []\n",
     "best_eq = []\n",
@@ -319,7 +386,7 @@
     "best_pp_v = 0\n",
     "best_var_v = 100\n",
     "\n",
-    "for s, model in par_models:\n",
+    "for s, model in par_models_clean:\n",
     "    if model.score(X_val, y_val) > best_acc_v:\n",
     "        best_acc_v = model.score(X_val, y_val)\n",
     "        best_acc = [model, model.score(X_val, y_val),\n",
@@ -354,12 +421,15 @@
     {
      "data": {
       "text/plain": [
-       "[LogisticRegression(C=35.46152563066118, max_iter=10000,\n",
-       "                    multi_class='multinomial', tol=4.504504504504493e-09),\n",
-       " 0.63,\n",
-       " 0.8823529411764706,\n",
-       " 0.9264705882352942,\n",
-       " 0.7436788203240532]"
+       "[LogisticRegression(C=3.9222543584631597, class_weight=None, dual=False,\n",
+       "                    fit_intercept=True, intercept_scaling=1, l1_ratio=None,\n",
+       "                    max_iter=10000, multi_class='multinomial', n_jobs=None,\n",
+       "                    penalty='l2', random_state=None, solver='lbfgs',\n",
+       "                    tol=4.504504504504503e-09, verbose=0, warm_start=False),\n",
+       " 0.66,\n",
+       " 0.9890109890109889,\n",
+       " 0.936868686868687,\n",
+       " 0.6647007305466981]"
       ]
      },
      "execution_count": 18,
@@ -379,11 +449,15 @@
     {
      "data": {
       "text/plain": [
-       "[LogisticRegression(C=1e-20, max_iter=10000, multi_class='multinomial', tol=0.0),\n",
-       " 0.48,\n",
-       " 1,\n",
-       " 0,\n",
-       " 1.471960144387974]"
+       "[LogisticRegression(C=3.9222543584631597, class_weight=None, dual=False,\n",
+       "                    fit_intercept=True, intercept_scaling=1, l1_ratio=None,\n",
+       "                    max_iter=10000, multi_class='multinomial', n_jobs=None,\n",
+       "                    penalty='l2', random_state=None, solver='lbfgs',\n",
+       "                    tol=4.504504504504503e-09, verbose=0, warm_start=False),\n",
+       " 0.66,\n",
+       " 0.9890109890109889,\n",
+       " 0.936868686868687,\n",
+       " 0.6647007305466981]"
       ]
      },
      "execution_count": 19,
@@ -403,12 +477,15 @@
     {
      "data": {
       "text/plain": [
-       "[LogisticRegression(C=1.7970050087560796, max_iter=10000,\n",
-       "                    multi_class='multinomial', tol=4.504504504504502e-09),\n",
-       " 0.58,\n",
-       " 0.7918552036199095,\n",
-       " 0.994261119081779,\n",
-       " 0.8232168307397645]"
+       "[LogisticRegression(C=7.0061383517914555, class_weight=None, dual=False,\n",
+       "                    fit_intercept=True, intercept_scaling=1, l1_ratio=None,\n",
+       "                    max_iter=10000, multi_class='multinomial', n_jobs=None,\n",
+       "                    penalty='l2', random_state=None, solver='lbfgs',\n",
+       "                    tol=4.504504504504505e-09, verbose=0, warm_start=False),\n",
+       " 0.65,\n",
+       " 0.96,\n",
+       " 0.989010989010989,\n",
+       " 0.7037571328799413]"
       ]
      },
      "execution_count": 20,
@@ -428,12 +505,15 @@
     {
      "data": {
       "text/plain": [
-       "[LogisticRegression(C=0.003964351541430085, max_iter=10000,\n",
-       "                    multi_class='multinomial', tol=4.504504504504486e-09),\n",
-       " 0.55,\n",
-       " 0.9714285714285714,\n",
-       " 0.8641251221896383,\n",
-       " 0.6422202325588763]"
+       "[LogisticRegression(C=0.004603800144057659, class_weight=None, dual=False,\n",
+       "                    fit_intercept=True, intercept_scaling=1, l1_ratio=None,\n",
+       "                    max_iter=10000, multi_class='multinomial', n_jobs=None,\n",
+       "                    penalty='l2', random_state=None, solver='lbfgs',\n",
+       "                    tol=4.5045045045045035e-09, verbose=0, warm_start=False),\n",
+       " 0.66,\n",
+       " 0.9333333333333333,\n",
+       " 0.9494505494505494,\n",
+       " 0.5222329678670933]"
       ]
      },
      "execution_count": 21,
@@ -458,7 +538,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "eclf2 = VotingClassifier(estimators=par_models, voting='hard')"
+    "eclf2 = SimpleVoting(estimators=par_models_clean, voting='soft')"
    ]
   },
   {
@@ -467,7 +547,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "eclf2 = eclf1.fit(X_train, y_train)"
+    "#eclf2 = eclf2.fit(X_val, y_val)"
    ]
   },
   {
@@ -480,10 +560,10 @@
      "output_type": "stream",
      "text": [
       "Metrics - Train Data\n",
-      "Acc:  0.6936936936936937\n",
-      "Eq Opor:  0.9819004524886877\n",
-      "P Perc:  0.8569157392686805\n",
-      "Coev Var:  0.6847719263017362\n"
+      "Acc:  0.6531531531531531\n",
+      "Eq Opor:  0.9323116219667943\n",
+      "P Perc:  0.961690271650801\n",
+      "Coev Var:  0.6675792642454637\n"
      ]
     }
    ],
@@ -504,16 +584,16 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Metrics - Train Data\n",
-      "Acc:  0.59\n",
-      "Eq Opor:  0.9150326797385621\n",
-      "P Perc:  0.9229797979797979\n",
-      "Coev Var:  0.7655137765938702\n"
+      "Metrics - Validation Data\n",
+      "Acc:  0.66\n",
+      "Eq Opor:  0.9890109890109889\n",
+      "P Perc:  0.8792270531400966\n",
+      "Coev Var:  0.6647007305466981\n"
      ]
     }
    ],
    "source": [
-    "print(\"Metrics - Train Data\")\n",
+    "print(\"Metrics - Validation Data\")\n",
     "print(\"Acc: \", eclf2.score(X_val, y_val))\n",
     "print(\"Eq Opor: \", equal_opportunity_score(sensitive_column=\"Sex\")(eclf2, X_val, y_val))\n",
     "print(\"P Perc: \", p_percent_score(sensitive_column=\"Sex\")(eclf2, X_val))\n",
@@ -530,10 +610,10 @@
      "output_type": "stream",
      "text": [
       "Metrics - Test Data\n",
-      "Acc:  0.6\n",
-      "Eq Opor:  0.9694915254237289\n",
-      "P Perc:  0.8286951144094001\n",
-      "Coev Var:  0.7746269997882853\n"
+      "Acc:  0.625\n",
+      "Eq Opor:  0.9323308270676691\n",
+      "P Perc:  0.9807692307692308\n",
+      "Coev Var:  0.6575103548402857\n"
      ]
     }
    ],
@@ -544,13 +624,6 @@
     "print(\"P Perc: \", p_percent_score(sensitive_column=\"Sex\")(eclf2, X_test))\n",
     "print(\"Coev Var: \", coefficient_of_variation(eclf2, X_test, y_test))"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
@@ -569,7 +642,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.10"
+   "version": "3.7.7"
   }
  },
  "nbformat": 4,
