--- a/Models comparison.ipynb
+++ b/Models comparison.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 1,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -29,7 +29,16 @@
     },
     "id": "e8l6HqNg4PEl"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/root/anaconda3/envs/py36/lib/python3.6/site-packages/sklearn/utils/deprecation.py:143: FutureWarning: The sklearn.linear_model.base module is  deprecated in version 0.22 and will be removed in version 0.24. The corresponding classes / functions should instead be imported from sklearn.linear_model. Anything that cannot be imported from sklearn.linear_model is now part of the private API.\n",
+      "  warnings.warn(message, FutureWarning)\n"
+     ]
+    }
+   ],
    "source": [
     "import pandas as pd\n",
     "from sklearn.model_selection import train_test_split\n",
@@ -49,7 +58,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 2,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -67,18 +76,7 @@
     "id": "VgYbd1wT4PEo",
     "tags": []
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "The autoreload extension is already loaded. To reload it, use:\n",
-      "  %reload_ext autoreload\n",
-      "The line_profiler extension is already loaded. To reload it, use:\n",
-      "  %reload_ext line_profiler\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "%load_ext autoreload\n",
     "%autoreload 2\n",
@@ -97,7 +95,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 3,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -116,7 +114,7 @@
    },
    "outputs": [],
    "source": [
-    "mydata= pd.read_csv(\"Datasets/german_credit_data.csv\")"
+    "mydata= pd.read_csv(\"Datasets - Originais/german_credit_data.csv\")"
    ]
   },
   {
@@ -133,7 +131,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 4,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -280,7 +278,7 @@
        "4           4870        24                  car   bad  "
       ]
      },
-     "execution_count": 85,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -291,7 +289,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 5,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -315,7 +313,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 6,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -339,7 +337,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 7,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -370,7 +368,102 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Age</th>\n",
+       "      <th>Job</th>\n",
+       "      <th>Housing</th>\n",
+       "      <th>Saving accounts</th>\n",
+       "      <th>Checking account</th>\n",
+       "      <th>Credit amount</th>\n",
+       "      <th>Duration</th>\n",
+       "      <th>Risk</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Sex</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>354</td>\n",
+       "      <td>354</td>\n",
+       "      <td>354</td>\n",
+       "      <td>354</td>\n",
+       "      <td>354</td>\n",
+       "      <td>354</td>\n",
+       "      <td>354</td>\n",
+       "      <td>354</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>168</td>\n",
+       "      <td>168</td>\n",
+       "      <td>168</td>\n",
+       "      <td>168</td>\n",
+       "      <td>168</td>\n",
+       "      <td>168</td>\n",
+       "      <td>168</td>\n",
+       "      <td>168</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "     Age  Job  Housing  Saving accounts  Checking account  Credit amount  \\\n",
+       "Sex                                                                        \n",
+       "0    354  354      354              354               354            354   \n",
+       "1    168  168      168              168               168            168   \n",
+       "\n",
+       "     Duration  Risk  \n",
+       "Sex                  \n",
+       "0         354   354  \n",
+       "1         168   168  "
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "numerical_data.groupby('Sex').count()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -394,7 +487,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 10,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -418,7 +511,221 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Age</th>\n",
+       "      <th>Sex</th>\n",
+       "      <th>Job</th>\n",
+       "      <th>Housing</th>\n",
+       "      <th>Saving accounts</th>\n",
+       "      <th>Checking account</th>\n",
+       "      <th>Credit amount</th>\n",
+       "      <th>Duration</th>\n",
+       "      <th>Risk</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>22</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2</td>\n",
+       "      <td>3</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2</td>\n",
+       "      <td>5951</td>\n",
+       "      <td>48</td>\n",
+       "      <td>-1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>45</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>7882</td>\n",
+       "      <td>42</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>53</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>4870</td>\n",
+       "      <td>24</td>\n",
+       "      <td>-1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>35</td>\n",
+       "      <td>0</td>\n",
+       "      <td>3</td>\n",
+       "      <td>2</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2</td>\n",
+       "      <td>6948</td>\n",
+       "      <td>36</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>28</td>\n",
+       "      <td>0</td>\n",
+       "      <td>3</td>\n",
+       "      <td>3</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2</td>\n",
+       "      <td>5234</td>\n",
+       "      <td>30</td>\n",
+       "      <td>-1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>989</th>\n",
+       "      <td>48</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>3</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2</td>\n",
+       "      <td>1743</td>\n",
+       "      <td>24</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>993</th>\n",
+       "      <td>30</td>\n",
+       "      <td>0</td>\n",
+       "      <td>3</td>\n",
+       "      <td>3</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>3959</td>\n",
+       "      <td>36</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>996</th>\n",
+       "      <td>40</td>\n",
+       "      <td>0</td>\n",
+       "      <td>3</td>\n",
+       "      <td>3</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>3857</td>\n",
+       "      <td>30</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>998</th>\n",
+       "      <td>23</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1845</td>\n",
+       "      <td>45</td>\n",
+       "      <td>-1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>999</th>\n",
+       "      <td>27</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2</td>\n",
+       "      <td>3</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2</td>\n",
+       "      <td>4576</td>\n",
+       "      <td>45</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>522 rows × 9 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "     Age  Sex  Job  Housing  Saving accounts  Checking account  Credit amount  \\\n",
+       "1     22    1    2        3                1                 2           5951   \n",
+       "3     45    0    2        1                1                 1           7882   \n",
+       "4     53    0    2        1                1                 1           4870   \n",
+       "7     35    0    3        2                1                 2           6948   \n",
+       "9     28    0    3        3                1                 2           5234   \n",
+       "..   ...  ...  ...      ...              ...               ...            ...   \n",
+       "989   48    0    1        3                1                 2           1743   \n",
+       "993   30    0    3        3                1                 1           3959   \n",
+       "996   40    0    3        3                1                 1           3857   \n",
+       "998   23    0    2        1                1                 1           1845   \n",
+       "999   27    0    2        3                2                 2           4576   \n",
+       "\n",
+       "     Duration  Risk  \n",
+       "1          48    -1  \n",
+       "3          42     1  \n",
+       "4          24    -1  \n",
+       "7          36     1  \n",
+       "9          30    -1  \n",
+       "..        ...   ...  \n",
+       "989        24     1  \n",
+       "993        36     1  \n",
+       "996        30     1  \n",
+       "998        45    -1  \n",
+       "999        45     1  \n",
+       "\n",
+       "[522 rows x 9 columns]"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "numerical_data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -427,7 +734,7 @@
        "2000"
       ]
      },
-     "execution_count": 91,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -440,7 +747,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -449,7 +756,7 @@
        "2000"
       ]
      },
-     "execution_count": 92,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -461,7 +768,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 13,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -486,9 +793,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
+   "source": [
+    "numerical_data.to_csv(\"Datasets - Limpos/german.csv\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "TypeError",
+     "evalue": "calc_reweight() missing 1 required positional argument: 'fair_feat'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-14-da902bccbbbd>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0msample_weight\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mcalc_reweight\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mX_train\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0my_train\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;31mTypeError\u001b[0m: calc_reweight() missing 1 required positional argument: 'fair_feat'"
+     ]
+    }
+   ],
    "source": [
     "sample_weight = calc_reweight(X_train, y_train)"
    ]
